k8s/06-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: todo-app
  labels: { app: backend }
spec:
  replicas: 2
  revisionHistoryLimit: 5         # bonus 2 : 5 revisions pour kubectl rollout undo
  progressDeadlineSeconds: 300    # bonus 2 : rollout fail si > 5 min
  # bonus 3 : Rolling Update explicite, zéro downtime garanti
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1            # max 1 pod EN PLUS pendant l'update (= 3 pods backend pendant l'update)
      maxUnavailable: 0      # 0 pod KO en même temps → continuité de service
  selector:
    matchLabels: { app: backend }
  template:
    metadata:
      labels: { app: backend }
    spec:
      containers:
        - name: backend
          image: lukasambry/todo-back:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet: { path: /health, port: 3000 }
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet: { path: /health, port: 3000 }
            initialDelaySeconds: 5
            periodSeconds: 5
