k8s/08-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: todo-app
  labels: { app: frontend }
spec:
  replicas: 3
  revisionHistoryLimit: 5         # bonus 2 : 5 revisions pour kubectl rollout undo
  progressDeadlineSeconds: 300    # bonus 2 : rollout fail si > 5 min
  # bonus 3 : Rolling Update explicite, zéro downtime garanti
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1            # max 1 pod EN PLUS pendant l'update
      maxUnavailable: 0      # 0 pod KO en même temps → continuité de service
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: frontend
          image: lukasambry/todo-front:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          # bonus 1 : Resource Requests & Limits → QoS Burstable + base pour HPA
          resources:
            requests:
              cpu: "20m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            tcpSocket: { port: 80 }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket: { port: 80 }
            initialDelaySeconds: 15
            periodSeconds: 20
